--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   path_provider: ^2.1.5
   provider: ^6.1.2
+  translator: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
