--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   provider: ^6.1.2
   translator: ^1.0.3+1
+  flutter_tts: ^4.2.0
 
 dev_dependencies:
   flutter_test:
