--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.1.2
   translator: ^1.0.3+1
   flutter_tts: ^4.2.0
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
