--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.1.2
   translator: ^1.0.3+1
   flutter_tts: ^4.2.0
+  file_picker: ^8.1.4
+  permission_handler: ^11.3.1
   firebase_auth: ^5.3.4
 
 dev_dependencies:
